# chimera

./: .gitignore  NoSQL-crash.txt  NoSQL-crashcourse.txt  README.md  pyproject.toml  setup.py
chimera.egg-info/: PKG-INFO  SOURCES.txt
chimera/engines/: README.txt  engine_interface.py  kv_engine.py
chimera/storage/: snapshot.py  wal.py
examples/: 01_basic_usage.py  02_engine_comparison.py  03_profiler_demo.py  04_performance_monitoring.py  05_real_world_scenarios.py  README.md  __init__.py
src/ChimeraDB/: __init__.py
src/ChimeraDB.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/ChimeraDB/chimera/: __init__.py  chimera_db.py
src/ChimeraDB/chimera/engines/: __init__.py  column_engine.py  document_engine.py  engine_interface.py  graph_engine.py  kv_engine.py  timeseries_engine.py
src/ChimeraDB/chimera/profiler/: __init__.py  data_profiler.py  engine_selector.py  metrics.py
src/ChimeraDB/chimera/storage/: __init__.py  snapshot.py  wal.py
tests/: conftest.py  test_document.py  test_kv.py  test_snapshot.py
tests/column/: __init__.py  test_column.py  test_column_large_scale.py
tests/core/: test_kv.py
tests/document/: test_document.py  test_document_large_scale.py
tests/engines/: test_kv.py
tests/graph/: __init__.py  test_graph.py  test_graph_large_scale.py
tests/key-value/: test_kv.py  test_kv_large_scale.py
tests/profiler/: test_profiler.py
tests/timeseries/: __init__.py  test_timeseries.py  test_timeseries_large_scale.py
